--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+k8s-init-containers
 
 # Test binary, built with `go test -c`
 *.test
@@ -13,3 +14,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+
+# Ignore DevSpace cache and log folder
+.devspace/
+
+# Ignore local environment values
+.env
